--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/fizzbuzz.js"></script>
+  <script src="src/airport.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/fizzBuzzSpec.js"></script>
+  <script src="spec/airportSpec.js"></script>
 
 </head>
 
