--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,7 +18,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/airportSpec.js"></script>
-  <script src="spec/weatherSpec.js"></script>
+  <!-- <script src="spec/weatherSpec.js"></script> -->
   <!-- <script src="spec/planeSpec.js"></script> -->
 
 </head>
