Refactored code. Created test for stormy on take off. Tests passings

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,8 +18,8 @@
 
   <!-- include spec files here... -->
   <script src="spec/airportSpec.js"></script>
-  <!-- <script src="spec/weatherSpec.js"></script> -->
-  <!-- <script src="spec/planeSpec.js"></script> -->
+  <script src="spec/weatherSpec.js"></script> -->
+  <!-- <script src="spec/planeSpec.js"></script>
 
 </head>
 
